# intro-to-ai-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  langgraph.json  pyproject.toml  requirements.txt
notebooks/: 1_graph-basics.ipynb  1_simple-graph.ipynb  2_math-agent.ipynb  2_react_agent.ipynb  3_rag-agent.ipynb
src/examples/: config.py  index_data.py  ingest_data.py  utils.py
src/examples/agents/: base_agent.py
src/examples/agents/dummy/: __init__.py  agent.py  langgraph_studio.py  schemas.py  studio.py
src/examples/agents/react/: agent.py  langgraph_studio.py  prompts.py  schemas.py  studio.py
src/examples/agents/researcher/: __init__.py  agent.py  langgraph_studio.py  prompts.py  schemas.py  studio.py
src/examples/agents/researcher/retriever/: agent.py
src/examples/agents/retriever/: __init__.py  agent.py  prompts.py  schemas.py
src/examples/ingestion/: __init__.py  delete_data.py  ingest_data.py  list_data.py
src/examples/tools/: math.py  rag.py  web_search.py
src/hackathon/: config.py  index_data.py
src/hackathon/agents/: base_agent.py
src/hackathon/agents/conversation/: README.md  __init__.py  api.py  api_graph.py  conversation_agent.py  debug_test.py  drafting_node.py  example_usage.py  graph.py  interactive_demo.py  multi_agent_example.py  state.py  test_api.py  test_legal_area_tool.py
src/hackathon/agents/dummy/: agent.py  langgraph_studio.py
src/hackathon/agents/react/: agent.py  langgraph_studio.py  prompts.py
src/hackathon/tools/: __init__.py  legal_tools.py  rag.py
